# leet_devops

./: .gitignore  AUTOMATIC_APPLICATION.md  BUILD_TROUBLESHOOTING.md  CHAT_INTERFACE_GUIDE.md  CONFIG_GUIDE.md  INSTALL.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TIMEOUT_FIX_GUIDE.md  USER_GUIDE.md  V4_SUMMARY.md  install.sh  license.txt  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: frappe_cicd.yml
leet_devops/: hooks.py  modules.txt  patches.txt
leet_devops/api/: app_structure_detector.py  chat.py  claude_api.py  code_applicator.py  code_inspector.py  code_operations.py  command_executor.py  devops.py  github_client.py  github_operations.py  path_utils.py  ssh_client.py
leet_devops/config/: desktop.py  leet_devops.py
leet_devops/doctype/app_development_session/: app_development_session.py
leet_devops/doctype/claude_api_settings/: claude_api_settings.py
leet_devops/doctype/dev_chat_message/: dev_chat_message.json  dev_chat_message.py
leet_devops/doctype/doctype_session/: doctype_session.json  doctype_session.py
leet_devops/doctype/file_change_log/: file_change_log.json  file_change_log.py
leet_devops/doctype/ld_change_request/: ld_change_request.json
leet_devops/doctype/ld_deployement/: ld_deployment.json
leet_devops/doctype/ld_environment/: ld_environment.json
leet_devops/doctype/ld_github_settings/: ld_github_settings.json
leet_devops/patches/: add_session_fields.py
leet_devops/public/css/: chat.css  (+2 more)
leet_devops/www/: chat.html  chat.py  github_webhook.py
(+61 files in other folders)
