[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "leet_devops"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
description = "AI-powered development assistant for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "anthropic>=0.18.0"
]

[project.urls]
Home = "https://github.com/yourusername/leet_devops"

[tool.bench.dev-dependencies]
# Development dependencies can be added here
